--- a/styles/Projects.module.css
+++ b/styles/Projects.module.css
@@ -47,14 +47,14 @@
 	display: grid;
 	align-items: center;
 	justify-content: center;
-	grid-template-columns: repeat(auto-fit, 330px);
+	grid-template-columns: repeat(auto-fit, 310px);
 	gap: 3rem 2rem;
 }
 
 .card {
-	width: 330px;
+	width: 310px;
 	border-radius: 15px;
-	border: 2px solid #fff;
+	border: 5px solid rgb(163, 148, 148);
 	background-color: rgba(255, 255, 255, 0.914);
 	background-color: rgb(236, 236, 236);
 	box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
@@ -68,7 +68,7 @@
 
 .card_text {
 	padding: 0 1rem;
-	height: 70px;
+	height: 140px;
 	color: #001220;
 	margin-top: -0.3rem;
 }
@@ -80,8 +80,15 @@
 	font-weight: bold;
 }
 .card_desc {
-	margin-bottom: 0.2rem;
+	margin-bottom: 0.5rem;
 	font-family: Verdana, Geneva, Tahoma, sans-serif;
 	font-size: 0.8rem;
 	font-style: italic;
+}
+.card_tools_desc {
+	margin-bottom: 0.5rem;
+	font-family: Verdana, Geneva, Tahoma, sans-serif;
+	font-size: 0.7rem;
+	color: rgb(170, 32, 75);
+	font-weight: bold;
 }
