--- a/styles/Contact.module.css
+++ b/styles/Contact.module.css
@@ -76,3 +76,20 @@
 	color: #0070f3;
 	border-color: #0070f3;
 }
+@media screen and (max-width: 375px) {
+	.section {
+		width: 90%;
+		margin: 0px 0 50px 20px;
+	}
+
+	.main {
+		padding: 4rem 0;
+	}
+	.contact {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		margin: 0 0 2rem 0;
+	}
+}
