--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -164,3 +164,12 @@
 		flex-direction: column;
 	}
 }
+@media screen and (max-width: 375px) {
+	.section {
+		width: 90%;
+		margin: 40px 20px;
+	}
+	.main {
+		padding: 2rem 0;
+	}
+}
