--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -31,9 +31,49 @@
 	margin-left: 20px;
 }
 
+.category::after {
+	content: "";
+	display: block;
+	width: 120%;
+	height: 3px;
+	background-color: #fff;
+	margin: 0 0 0 -0.3rem;
+	transform: scale(0);
+	transition: transform 0.3s ease-in-out;
+}
+
+.active::after {
+	content: "";
+	display: block;
+	width: 100%;
+	height: 3px;
+	background-color: #fff;
+	font-weight: bold;
+	margin: 0;
+	transition: transform 0.3s ease-in-out;
+}
+
+.category:hover:after {
+	transform: scale(1);
+}
+
 .icon {
 	margin-left: 20px;
 	width: 20px;
 	height: 20px;
 	color: white;
+}
+
+@media screen and (max-width: 375px) {
+	.navbar {
+		flex-direction: column;
+	}
+	.name {
+		justify-content: center;
+		margin-left: 0;
+	}
+	.links {
+		justify-content: center;
+		margin-right: 0;
+	}
 }
